[tool.poetry]
name = "micio"
version = "0.1.0"
description = ""
authors = ["Massimiliano Ravelli <massimiliano.ravelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
flet = "^0.10.0"
pyinstaller = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
